[package]
name = "nft-staking-real"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_staking_real"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version="0.29.0", features=["init-if-needed"]}
anchor-spl = { version = "0.29.0", features = ["metadata"] }
getrandom = { version = "0.2.2", features = ["custom"] }
winnow="=0.4.1"
toml_datetime="=0.6.1"
solana-program = "=1.17.3"
